--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,12 @@
   "dependencies": {
     "angular": "~1.2.25",
     "bootstrap": "~3.2.0",
-    "fontawesome": "~4.2.0"
+    "fontawesome": "~4.2.0",
+    "angular-pouchdb": "angular-pouchdb/angular-pouchdb",
+    "pouchdb": "~3.0.6",
+    "angular-route": "~1.2.25"
+  },
+  "resolutions": {
+    "pouchdb": "~3.0.6"
   }
 }
