--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,9 @@
     "angular-pouchdb": "angular-pouchdb/angular-pouchdb",
     "pouchdb": "~3.0.6",
     "angular-route": "~1.2.25",
-    "mathjs": "~1.0.1"
+    "mathjs": "~1.0.1",
+    "angular-bootstrap": "~0.11.2",
+    "angular-ui-select": "~0.8.2"
   },
   "resolutions": {
     "pouchdb": "~3.0.6"
