start implementation of logical frame controller

--- a/project.json
+++ b/project.json
@@ -1,4 +1,3 @@
-
 {
 	"_id": "e1764020-cecf-4445-bd5f-2906c33c9c5e",
 	"type": "project",
@@ -7,44 +6,58 @@
 	"begin": "2011-05",
 	"end": "2015-12",
 
-	"logicOfIntervention": "",
-	"indicators": [
-		{
-			"id": "1c38fa28-1dc2-449e-aa34-08aa3b773e3b",
-			"relevance": "3434",
-			"minimum": 0,
-			"orangeMinimum": 20,
-			"greenMinimum": 40,
-			"greenMaximum": 60,
-			"orangeMaximum": 80,
-			"maximum": 100,
-			"baseline": 4,
-			"targets": [
-				{"period": "2014-07", "value": 34},
-				{"period": "2014-07", "value": 56},
-				{"period": "2014-07", "value": 73}
-			]
-		}
-	],
-
-	"specificObjectives": [
-		{
-			"logicOfIntervention": "",
-			"hypothesis": "",
-			"indicators": [],
-			"expectedResults": [
-				{
-					"description": "",
-					"hypothesis": "",
-					"indicators": [],
-					"activities": [
-						{ "description": "", "prerequesites": "" },
-						{ "description": "", "prerequesites": "" }
-					]
-				}
-			]
-		}
-	],
+	"logicalFrame": {
+		"goal": "To contribute to the reduction of neonatal mortality and maternal mortality in Afar region of Ethiopia by the next Ethiopia Demographic and Health Survey (EDHS)",
+		"indicators": [],
+		"purposes": [
+			{
+				"description": "To reduce the prevalence and the harmful consequences of female genital mutilation in Zone 5 of Afar region by 2015",
+				"assumptions": "There is low risk for lies or false declarations during surveys. There is low to medium risk for the practice of female genital mutilation to continue through less severe forms, in secret and/or in neighbouring areas. The Afar region is homogeneous so that baseline values calculated for the whole of the region (EDHS 2005) are applicable to the sole Zone 5",
+				"indicators": ["1c38fa28-1dc2-449e-aa34-08aa3b773e3b"],
+				"outputs": [
+					{
+						"description": "The population in Zone 5 of Afar region (around 205,000 individuals) are aware of the harmful consequences of female genital mutilation.",
+						"assumptions": "The awareness of the population concerns all the types of female genital mutilation, including the least severe forms.",
+						"indicators": [],
+						"activities": [
+							{ "description": "to conduct KAP surveys", "prerequesites": "" },
+							{ "description": "to develop information, education, communication for the population on female genital mutilation", "prerequesites": "" },
+							{ "description": "to train and support114 Health Extension Workers (HEW), 92 skilled health workers, 548 teachers on IEC on female genital mutilation", "prerequesites": "" }
+						]
+					},
+					{
+						"description": "Prevention and management of complications and consequences of female genital mutilation is integrated in the continuum of care provided in 57 health facilities in Zone 5 of Afar region.",
+						"assumptions": "Health facilities are functional and there is no disruption in the continuum of care.",
+						"indicators": [],
+						"activities": [
+							{ "description": "to train and support 92 skilled health workers on female genital mutilation in the continuum of care", "prerequesites": "" },
+							{ "description": "to introduce materials and protocols in 57 health facilities for the integration of WHO recommendations related to female genital mutilation", "prerequesites": "" },
+							{ "description": "to set up protocols (including transfers to Dalifage hospital) for the opening of type III FGM during the second quarter of pregnancy", "prerequesites": "" }
+						]
+					},
+					{
+						"description": "Female genital mutilation is a focus of community dialogue in 57 kebele in Zone 5 of Afar region and communities choose to abandon the practice.",
+						"assumptions": "Community leaders (clan leaders, religious leaders...) and traditional authorities (sultan) are influential and instrumental enough to convince their communities to abandon the practice of female genital mutilation.",
+						"indicators": [],
+						"activities": [
+							{ "description": "to train the local partner ACISDA on community dialogue facilitation methodology", "prerequesites": "" },
+							{ "description": "to set up, train and support 57 local anti-FGM committees", "prerequesites": "" },
+							{ "description": "to facilitate community dialogue sessions on prevention of female genital mutilation in 57 kebele", "prerequesites": "" }
+						]
+					},
+					{
+						"description": "Knowledge, and prevention, of female genital mutilation is introduced and supported at regional level.",
+						"assumptions": "All the stakeholders involved in prevention of female genital mutilation in Afar region are known. All of them agree to share information and their experiences.",
+						"indicators": [],
+						"activities": [
+							{ "description": "to prepare and write memoranda of understanding between partners and other stakeholders", "prerequesites": "" },
+							{ "description": "to facilitate regional networking between partners and stakeholders involved in prevention of female genital mutilation", "prerequesites": "" }
+						]
+					}
+				]
+			}
+		]
+	},
 
 	"inputEntities": [
 		{ "id": "e37adee7-2cd9-63a9-a82d-2d3cd588a970", "name": "Nongphavong" },
@@ -96,6 +109,19 @@
 		}
 	],
 
+	"indicators": {
+		"1c38fa28-1dc2-449e-aa34-08aa3b773e3b": {
+			"relevance": "3434",
+			"baseline": 4,
+			"minimum": 0, "orangeMinimum": 20, "greenMinimum": 40, "greenMaximum": 60, "orangeMaximum": 80, "maximum": 100,
+			"targets": [
+				{"period": "2014-07", "value": 34},
+				{"period": "2014-07", "value": 56},
+				{"period": "2014-07", "value": 73}
+			]
+		}
+	},
+
 	"dataCollection": [
 		{
 			"id": "545e3225-6b7d-4aef-b3bd-322f1e1917f4",
@@ -103,19 +129,12 @@
 			"periodicity": "monthly",
 			"useProjectStart": true,
 			"useProjectEnd": true,
-
-			"indicators": {
-				"1c38fa28-1dc2-449e-aa34-08aa3b773e3b": "fieldId1/fieldId2"
-			},
+			"indicators": ["1c38fa28-1dc2-449e-aa34-08aa3b773e3b"],
 
 			"fields": {
-				"field1": {
-					"source": "",
-					"indicator": "8bafe57e-1c1d-4a7e-bf9f-fbd2a27c4b0f"
-				},
-				"field2": {
-					"source": "",
-					"indicator": "4741ada6-709a-4a19-913e-ea174f053bbb"
+				"1c38fa28-1dc2-449e-aa34-08aa3b773e3b": {
+					"type": "computed",
+					"formula": "37592e8b-fa7c-47cb-b88b-19a5a82d78aa"
 				}
 			}
 		},
@@ -125,11 +144,10 @@
 			"periodicity": "monthly",
 			"useProjectStart": true,
 			"useProjectEnd": true,
-
-			"indicators": {
-			},
+			"indicators": [],
 
 			"fields": {
+
 			}
 		}
 	]
