--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,9 @@
     "mathjs": "~1.0.1",
     "angular-bootstrap": "~0.11.2",
     "angular-ui-select": "~0.8.2",
-    "angular-bootstrap-show-errors": "https://github.com/paulyoder/angular-bootstrap-show-errors.git#~2.0.0"
+    "angular-bootstrap-show-errors": "https://github.com/paulyoder/angular-bootstrap-show-errors.git#~2.0.0",
+    "angular-moment": "~0.8.2",
+    "angularjs-nvd3-directives": "~0.0.7"
   },
   "resolutions": {
     "pouchdb": "~3.0.6"
