--- a/bower.json
+++ b/bower.json
@@ -26,9 +26,7 @@
     "angular-ui-select": "~0.8.2",
     "angular-bootstrap-show-errors": "https://github.com/paulyoder/angular-bootstrap-show-errors.git#~2.0.0",
     "angular-moment": "~0.8.2",
-    "angularjs-nvd3-directives": "~0.0.7"
-  },
-  "resolutions": {
-    "pouchdb": "~3.0.6"
+    "angularjs-nvd3-directives": "~0.0.7",
+    "javascript-state-machine": "https://github.com/jakesgordon/javascript-state-machine.git#~2.3.3"
   }
 }
