--- a/bower.json
+++ b/bower.json
@@ -26,8 +26,10 @@
     "angular-ui-select": "~0.8.2",
     "angular-bootstrap-show-errors": "https://github.com/paulyoder/angular-bootstrap-show-errors.git#~2.0.0",
     "angular-moment": "~0.8.2",
-    "angularjs-nvd3-directives": "~0.0.7",
     "javascript-state-machine": "https://github.com/jakesgordon/javascript-state-machine.git#~2.3.3",
-    "pouchdb-authentication": "~0.3.6"
+    "pouchdb-authentication": "~0.3.6",
+    "c3": "~0.4.1",
+    "FileSaver.js": "https://github.com/eligrey/FileSaver.js.git",
+    "saveSvgAsPng": "https://github.com/exupero/saveSvgAsPng.git#gh-pages"
   }
 }
