--- a/package.json
+++ b/package.json
@@ -1,13 +1,25 @@
 {
-	"name": "Monitool",
-	"main": "index.html",
-	"window": {
-		"title": "Monitool",
-		"toolbar": false,
-		"min_width": 1000
-	},
-	"dependencies": {
-		"request": "x"
-	}
+  "name": "Monitool",
+  "main": "dev/index.html",
+  "window": {
+    "title": "Monitool",
+    "toolbar": false,
+    "min_width": 1000
+  },
+  "devDependencies": {
+    "gulp": "x",
+    "gulp-angular-templatecache": "^1.4.2",
+    "gulp-awspublish": "0.0.23",
+    "gulp-cloudfront": "0.0.14",
+    "gulp-concat": "^2.4.1",
+    "gulp-minify-css": "^0.3.11",
+    "gulp-ng-annotate": "^0.3.5",
+    "gulp-rename": "^1.2.0",
+    "gulp-replace": "^0.5.0",
+    "gulp-rimraf": "^0.1.1",
+    "gulp-s3": "^0.3.0",
+    "gulp-uglify": "^1.0.1",
+    "request": "x",
+    "rimraf": "^2.2.8"
+  }
 }
-
