--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
     "min_width": 1000
   },
   "devDependencies": {
+    "add-cors-to-couchdb": "0.0.3",
     "gulp": "x",
     "gulp-angular-templatecache": "^1.4.2",
     "gulp-awspublish": "0.0.23",
     "gulp-cloudfront": "0.0.14",
     "gulp-concat": "^2.4.1",
+    "gulp-insert": "^0.4.0",
     "gulp-minify-css": "^0.3.11",
     "gulp-ng-annotate": "^0.3.5",
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.5.0",
     "gulp-rimraf": "^0.1.1",
-    "gulp-s3": "^0.3.0",
     "gulp-uglify": "^1.0.1",
     "request": "x",
     "rimraf": "^2.2.8"
