--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "gulp-replace": "^0.5.0",
     "gulp-rimraf": "^0.1.1",
     "gulp-uglify": "^1.0.1",
+    "lorem-ipsum": "^1.0.1",
+    "moment": "^2.8.4",
+    "node-uuid": "^1.4.1",
     "request": "x",
     "rimraf": "^2.2.8",
     "streamqueue": "^0.1.1"
