--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lorem-ipsum": "^1.0.1",
     "moment": "^2.8.4",
     "node-uuid": "^1.4.1",
+    "readline-sync": "^0.4.9",
     "request": "x",
     "rimraf": "^2.2.8",
     "streamqueue": "^0.1.1"
