--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "basic-auth": "^1.0.0",
     "basic-auth-connect": "^1.0.0",
     "body-parser": "^1.10.2",
+    "compression": "^1.3.0",
     "cors": "^2.5.3",
     "express": "^4.11.1",
     "mathjs": "^1.2.0",
