Fix inputs, reporting, build. Make loading pages faster (skip all options, make more queries in parallel)

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cors": "^2.5.3",
     "express": "^4.11.1",
     "mathjs": "^1.2.0",
-    "nano": "^6.0.2"
+    "nano": "^6.0.2",
+    "serve-static": "^1.8.1"
   }
 }
