--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "streamqueue": "^0.1.1"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "basic-auth": "^1.0.0",
     "basic-auth-connect": "^1.0.0",
     "body-parser": "^1.10.2",
     "compression": "^1.3.0",
     "cors": "^2.5.3",
     "express": "^4.11.1",
+    "is-my-json-valid": "^2.3.0",
     "mathjs": "^1.2.0",
     "nano": "^6.0.2",
     "serve-static": "^1.8.1"
