--- a/package.json
+++ b/package.json
@@ -34,11 +34,17 @@
     "basic-auth-connect": "^1.0.0",
     "body-parser": "^1.10.2",
     "compression": "^1.3.0",
+    "cookie-parser": "^1.3.3",
     "cors": "^2.5.3",
     "express": "^4.11.1",
+    "express-session": "^1.10.2",
     "is-my-json-valid": "^2.3.0",
     "mathjs": "^1.2.0",
     "nano": "^6.0.2",
+    "passport": "^0.2.1",
+    "passport-azure-oauth": "0.0.6",
+    "passport-oauth2": "^1.1.2",
+    "passport-saml": "^0.8.0",
     "serve-static": "^1.8.1"
   }
 }
