--- a/config-template.json
+++ b/config-template.json
@@ -2,14 +2,19 @@
 	"aws": {
 		"key": "",
 		"secret": "",
-		"bucket": "someprefix-monitool",
+		"bucket": "",
 		"region": "eu-west-1"
 	},
-	"localdb": "monitool",
 	"couchdb": {
-		"url": "http://couchdb-url-without-trailing-slash.com:5984",
-		"bucket": "someprefix-monitool",
-		"username": "",
-		"password": ""
+		"url": "http://user:pass@localhost:5984",
+		"bucket": "monitool"
+	},
+	"oauth": {
+		"authUrl": "",
+		"tokenUrl": "",
+		"clientId": "",
+		"clientSecret": "",
+		"callbackUrl": "http://localhost:8000/auth/callback",
+		"resource": "https://graph.windows.net"
 	}
 }
