Fix project schema

--- a/server/models/schemas/project.json
+++ b/server/models/schemas/project.json
@@ -141,17 +141,16 @@
 									"additionalProperties": false,
 									"properties": {
 										"description": { "type": "string", "minLength": 1 },
-										"assumptions": { "type": "string", "minLength": 1 },
+										"assumptions": { "type": "string" },
 										"activities": {
 											"type": "array",
 											"items": {
 												"type": "object",
 												"additionalProperties": false,
-												"required": ["description", "prerequisites"],
+												"required": ["description"],
 
 												"properties": {
-													"description": { "type": "string", "minLength": 1 },
-													"prerequisites": { "type": "string", "minLength": 1 }
+													"description": { "type": "string", "minLength": 1 }
 												}
 											}
 										},
