--- a/server/models/schemas/project.json
+++ b/server/models/schemas/project.json
@@ -32,10 +32,12 @@
 					"type": "object",
 					"additionalProperties": false,
 					"required": [
-						"relevance", "baseline", "target"
+						"relevance", "baseline", "target", "inCharge", "source"
 					],
 					"properties": {
 						"relevance": { "type": "string", "minLength": 1 },
+						"source": { "type": "string", "minLength": 1 },
+						"inCharge": { "type": "string", "minLength": 1 },
 						"baseline": { "type": ["number", "null"] },
 						"target": { "type": ["number", "null"] },
 						"showRed": { "type": "number" },
@@ -82,9 +84,6 @@
 								"type": {
 									"type": "string",
 									"pattern": "^input|(link:[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}(\\.[a-z0-9A-Z]+)+)|(compute:[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12})$"
-								},
-								"source": {
-									"type": "string"
 								},
 								"parameters": {
 									"type": "object",
