--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "compression": "^1.3.0",
     "cookie-parser": "^1.3.3",
     "cors": "^2.5.3",
+    "event-stream": "^3.3.0",
     "express": "^4.11.1",
     "express-session": "^1.10.2",
     "is-my-json-valid": "^2.3.0",
