--- a/server/models/schemas/project.json
+++ b/server/models/schemas/project.json
@@ -32,7 +32,7 @@
 					"type": "object",
 					"additionalProperties": false,
 					"required": [
-						"relevance", "baseline", "target", "inCharge", "source"
+						"relevance", "inCharge", "source"
 					],
 					"properties": {
 						"relevance": { "type": "string", "minLength": 1 },
