--- a/package.json
+++ b/package.json
@@ -7,44 +7,33 @@
     "min_width": 1000
   },
   "devDependencies": {
-    "add-cors-to-couchdb": "0.0.3",
+    "del": "x",
+    "event-stream": "x",
     "gulp": "x",
-    "gulp-angular-templatecache": "^1.4.2",
-    "gulp-awspublish": "0.0.23",
-    "gulp-bower": "0.0.10",
-    "gulp-cloudfront": "0.0.14",
-    "gulp-concat": "^2.4.1",
-    "gulp-insert": "^0.4.0",
-    "gulp-minify-css": "^0.3.11",
-    "gulp-ng-annotate": "^0.3.5",
-    "gulp-rename": "^1.2.0",
-    "gulp-replace": "^0.5.0",
-    "gulp-rimraf": "^0.1.1",
-    "gulp-uglify": "^1.0.1",
-    "lorem-ipsum": "^1.0.1",
-    "moment": "^2.8.4",
-    "node-uuid": "^1.4.1",
-    "readline-sync": "^0.4.9",
+    "gulp-angular-templatecache": "x",
+    "gulp-bower": "x",
+    "gulp-concat": "x",
+    "gulp-minify-css": "x",
+    "gulp-ng-annotate": "x",
+    "gulp-rename": "x",
+    "gulp-replace": "x",
+    "gulp-uglify": "x",
+    "moment": "x",
+    "node-uuid": "x",
     "request": "x",
-    "rimraf": "^2.2.8",
-    "streamqueue": "^0.1.1"
+    "streamqueue": "x"
   },
   "dependencies": {
-    "async": "^0.9.0",
-    "basic-auth": "^1.0.0",
-    "basic-auth-connect": "^1.0.0",
-    "body-parser": "^1.10.2",
-    "compression": "^1.3.0",
-    "cookie-parser": "^1.3.3",
-    "cors": "^2.5.3",
-    "event-stream": "^3.3.0",
-    "express": "^4.11.1",
-    "express-session": "^1.10.2",
-    "is-my-json-valid": "^2.3.0",
-    "mathjs": "^1.2.0",
-    "nano": "^6.0.2",
-    "passport": "^0.2.1",
-    "passport-oauth2": "^1.1.2",
-    "serve-static": "^1.8.1"
+    "async": "x",
+    "body-parser": "x",
+    "compression": "x",
+    "cookie-parser": "x",
+    "express": "x",
+    "express-session": "x",
+    "is-my-json-valid": "x",
+    "nano": "x",
+    "passport": "x",
+    "passport-oauth2": "x",
+    "serve-static": "x"
   }
 }
