--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "is-my-json-valid": "x",
     "nano": "x",
     "passport": "x",
+    "passport-http-oauth": "^0.1.3",
     "passport-oauth2": "x",
     "serve-static": "x"
   }
