Implement some tests!

--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "gulp-rename": "x",
     "gulp-replace": "x",
     "gulp-uglify": "x",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.9",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-jasmine": "^0.3.6",
     "moment": "x",
     "node-uuid": "x",
     "request": "x",
