--- a/package.json
+++ b/package.json
@@ -32,14 +32,20 @@
     "async": "x",
     "body-parser": "x",
     "compression": "x",
+    "connect-couchdb": "^1.0.0",
     "cookie-parser": "x",
     "express": "x",
     "express-session": "x",
     "is-my-json-valid": "x",
+    "jade": "^1.11.0",
     "nano": "x",
+    "oauth2orize": "^1.0.1",
     "passport": "x",
+    "passport-http": "^0.3.0",
+    "passport-http-bearer": "^1.0.1",
     "passport-http-oauth": "^0.1.3",
     "passport-oauth2": "x",
+    "passport-oauth2-client-password": "^0.1.2",
     "serve-static": "x"
   }
 }
