--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
     "passport-http-oauth": "^0.1.3",
+    "passport-local": "^1.0.0",
     "passport-oauth2": "x",
     "passport-oauth2-client-password": "^0.1.2",
     "serve-static": "x"
