--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "passport-local": "^1.0.0",
     "passport-oauth2": "x",
     "passport-oauth2-client-password": "^0.1.2",
+    "password-hash": "^1.2.2",
     "serve-static": "x"
   }
 }
