--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "Monitool",
-  "main": "dev/index.html",
-  "window": {
-    "title": "Monitool",
-    "toolbar": false,
-    "min_width": 1000
-  },
+  "description": "Indicator monitoring application for Medecins du Monde",
+  "version": "2.2.1",
+
   "devDependencies": {
     "del": "x",
     "event-stream": "x",
@@ -13,16 +10,16 @@
     "gulp-angular-templatecache": "x",
     "gulp-bower": "x",
     "gulp-concat": "x",
-    "gulp-minify-css": "x",
+    "gulp-clean-css": "x",
     "gulp-ng-annotate": "x",
     "gulp-rename": "x",
     "gulp-replace": "x",
     "gulp-uglify": "x",
-    "jasmine-core": "^2.3.4",
-    "karma": "^0.13.9",
-    "karma-chrome-launcher": "^0.2.0",
-    "karma-jasmine": "^0.3.6",
-    "karma-spec-reporter": "0.0.20",
+    "jasmine-core": "x",
+    "karma": "x",
+    "karma-chrome-launcher": "x",
+    "karma-jasmine": "x",
+    "karma-spec-reporter": "x",
     "moment": "x",
     "node-uuid": "x",
     "request": "x",
@@ -32,22 +29,22 @@
     "async": "x",
     "body-parser": "x",
     "compression": "x",
-    "connect-couchdb": "^1.0.0",
+    "connect-couchdb": "x",
     "cookie-parser": "x",
     "express": "x",
     "express-session": "x",
     "is-my-json-valid": "x",
-    "jade": "^1.11.0",
+    "jade": "x",
     "nano": "x",
-    "oauth2orize": "^1.0.1",
+    "oauth2orize": "x",
     "passport": "x",
-    "passport-http": "^0.3.0",
-    "passport-http-bearer": "^1.0.1",
-    "passport-http-oauth": "^0.1.3",
-    "passport-local": "^1.0.0",
+    "passport-http": "x",
+    "passport-http-bearer": "x",
+    "passport-http-oauth": "x",
+    "passport-local": "x",
     "passport-oauth2": "x",
-    "passport-oauth2-client-password": "^0.1.2",
-    "password-hash": "^1.2.2",
+    "passport-oauth2-client-password": "x",
+    "password-hash": "x",
     "serve-static": "x"
   }
 }
