--- a/server/models/resources/project.json
+++ b/server/models/resources/project.json
@@ -47,7 +47,7 @@
 					"name": { "type": "string", "minLength": 1 },
 					"entities": { "type": "array", "items": { "$ref": "#/definitions/uuid" } },
 					"collect": { "type": "string", "enum": ["project", "entity", "some_entity"] },
-					"periodicity": { "type": "string", "enum": ["day", "week_sat", "week_sun", "week_mon", "month", "quarter", "year", "free"] },
+					"periodicity": { "type": "string", "enum": ["day", "week_sat", "week_sun", "week_mon", "month", "quarter", "semester", "year", "free"] },
 					"start": { "oneOf": [{"type": "null"}, { "type": "string", "format": "date" }]},
 					"end": { "oneOf": [{"type": "null"}, { "type": "string", "format": "date" }]},
 					"elements": {
