Fix licence in bower.json

--- a/client/bower.json
+++ b/client/bower.json
@@ -6,7 +6,7 @@
     "Romain Gilliotte <romain.gilliotte@medecinsdumonde.net>"
   ],
   "main": "main.html",
-  "license": "MIT",
+  "license": "GPL-3.0+",
   "ignore": [
     "**/.*",
     "node_modules",
